<resources>
    <drawable name="pass_icon">@drawable/ic_arrow_back_white_24dp</drawable>
    <string name="app_name">Just Eat It</string>
    <string name="slogan">Just Drink It</string>
    <string name="slogan2">No matter where you are, whether you are at home, or in the office, or on the beach - we will find you and bring you delicious food</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu">Menu</string>
    <string name="about">About Us</string>
    <string name="account">Your Account</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_location">Map</string>
</resources>
